2002-04-08  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/workbook-control-gui.c (hide_show_detail_real) : new
	(group_ungroup_colrow_real) : new
	(hide_show_detail) : use dialog_col_row
	(group_ungroup_colrow) : use dialog_col_row

2002-04-08  Morten Welinder  <terra@diku.dk>

	* src/expr.c (cb_expression_pool_leak): New function.
	(expr_shutdown): Show leaking expressions.

	* src/validation.c (validation_eval): Plug leaks.

2002-04-08  Jon K Hellan  <hellan@acm.org>

	* configure.in: Test for <wctype.h>

	* src/stf-parse.c: Include <wctype.h> only if present.

2002-04-08  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/colrow.c (colrow_set_sizes) : set to default if size is 0
	* src/commands.c (cmd_resize_colrow) : size == 0 means default size
	* src/summary.c : avoid warnings
	* src/workbook-cmd-format.c (sheet_dialog_set_column_width) : just
	  call dialog_col_width
	(workbook_cmd_format_column_std_width) : ditto
	(sheet_dialog_set_row_height) : just call dialog_row_height
	(workbook_cmd_format_row_std_height) : ditto

2002-04-07  Jon K Hellan  <hellan@acm.org>

	* configure.in: Test for isfinite as a macro.
	* acconfig.h: Ditto.

2002-04-05  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/item-edit.c : link to the expr-entry changed signal rather than its
	  gtkentry changed signal.

2002-04-05  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/item-edit.c (point_is_inside_range) : rather than parsing
	  using parse_surrounding_ranges, ask the expression entry
	  widget for the already parsed info.
	* src/parse-util.c (parse_surrounding_ranges) : fix formatting and
	  add some debug switches

2002-04-05  Morten Welinder  <terra@diku.dk>

	* src/gutils.c (gnm_mem_chunk_foreach_leak): New function.

	* src/str.c (string_get, string_get_nocopy, string_unref):
	Optionally use string pool.
	(string_shutdown): New function.
	* src/main.c (main): Call string_shutdown.

2002-04-05  Jody Goldberg <jody@gnome.org>
