@@ -365,6 +365,9 @@ AC_CHECK_HEADERS(ieeefp.h ieee754.h)
 dnl Check for some functions
 AC_CHECK_FUNCS(random drand48 finite)
 
+dnl FIXME: Does this really belong here?
+AC_CHECK_FUNC(bind_textdomain_codeset,,[AC_CHECK_LIB(intl,bind_textdomain_codeset)])
+
 dnl isfinite is a macro on HPUX
 AC_TRY_COMPILE([#include <math.h>], [int a = isfinite(0.0)], [AC_DEFINE(HAVE_ISFINITE)], [])
 
